Fix spacing at bottom of blockquotes

--- a/scss/_base_blockquotes.scss
+++ b/scss/_base_blockquotes.scss
@@ -4,6 +4,12 @@
 @mixin vf-b-blockquotes {
   blockquote {
     border-left: 2px solid $color-mid-dark;
+    margin-bottom: 1.1rem;
+    padding-bottom: 0.4rem;
+
+    & > :last-child {
+      margin-bottom: 0;
+    }
 
     > cite {
       display: block;
